<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfigActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pre"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/printer_communication"
            android:textColor="#000000"
            android:textSize="20sp" />

        <com.jyt.bitcoinmaster.view.MySpinner
            android:id="@+id/printer_comm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></com.jyt.bitcoinmaster.view.MySpinner>

        <LinearLayout
            android:id="@+id/com_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:text="@string/print_dev"
                android:textColor="#000000"
                android:textSize="20sp" />

            <com.jyt.bitcoinmaster.view.MySpinner
                android:id="@+id/printer_dev"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/print_baudrate"
                android:textColor="#000000"
                android:textSize="20sp" />

            <com.jyt.bitcoinmaster.view.MySpinner
                android:id="@+id/printer_baudrate"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_vertical"-->
        <!--android:layout_marginVertical="10dp"-->
        <!--android:orientation="horizontal"-->
        <!--&gt;-->
        <!--<TextView-->
            <!--android:layout_width="160dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:text="@string/cdm_type"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="20sp" />-->
        <!--<com.jyt.bitcoinmaster.view.MySpinner-->
            <!--android:id="@+id/cmd_type"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->
        <!--</com.jyt.bitcoinmaster.view.MySpinner>-->
        <!--<TextView-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:text="@string/Communication_dev"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="20sp" />-->
        <!--<com.jyt.bitcoinmaster.view.MySpinner-->
            <!--android:id="@+id/com_comm"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->
        <!--</com.jyt.bitcoinmaster.view.MySpinner>-->

    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_vertical"-->
        <!--android:layout_marginVertical="10dp"-->
        <!--android:orientation="horizontal"-->
        <!--&gt;-->
        <!--<TextView-->
            <!--android:layout_width="160dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:text="@string/cdm_dev"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="20sp" />-->
        <!--<com.jyt.bitcoinmaster.view.MySpinner-->
            <!--android:id="@+id/com_cmd"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->
        <!--</com.jyt.bitcoinmaster.view.MySpinner>-->
        <!--<TextView-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:text="@string/electric_door_dev"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="20sp" />-->
        <!--<com.jyt.bitcoinmaster.view.MySpinner-->
            <!--android:id="@+id/com_door"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->
        <!--</com.jyt.bitcoinmaster.view.MySpinner>-->

    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/led_bussiness"
            android:textColor="#000000"
            android:textSize="20sp" />
        <com.jyt.bitcoinmaster.view.MySpinner
            android:id="@+id/led_vendor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            >
        </com.jyt.bitcoinmaster.view.MySpinner>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/led_dev"
            android:textColor="#000000"
            android:textSize="20sp" />
        <com.jyt.bitcoinmaster.view.MySpinner
            android:id="@+id/com_led"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            >
        </com.jyt.bitcoinmaster.view.MySpinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/led_id"
            android:textColor="#000000"
            android:textSize="20sp" />
        <com.jyt.bitcoinmaster.view.MySpinner
            android:id="@+id/led_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            >
        </com.jyt.bitcoinmaster.view.MySpinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/confirm"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:onClick="confirm"
            android:text="@string/confrim"
             />
    </LinearLayout>

</LinearLayout>